feat(alert): ✨ 新增集群告警组映射功能
添加集群告警组映射相关组件，完整实现DTO/VO/Entity转换体系：
1. 新增ClusterAlertGroupMapConverter转换器接口
2. 添加ClusterAlertGroupMapDTO数据传输对象
3. 增加ClusterAlertGroupMapVO视图对象
4. 扩展服务层CRUD方法并实现DTO转换
5. 完善控制器接口实现RESTful API

组件采用分层架构设计，包含完整的数据转换链路：
DAO层 → Service层(Entity-DTO) → Controller层(DTO-VO)

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>